$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-06-02 [B] Fixed 'missing query' known issue {Nibbler}
2009-06-02 [D] Added section to docs about debug_output {GauGau}
2009-06-02 [D] Added URL parameter expand_all for docs to allow reference to anchors within sections that are collapsed out of the box {GauGau}
2009-06-02 [A] Added peak records for page performance records in debug_mode {GauGau}
2009-06-01 [A] Added log entries for attempts to access pages that the current user doesn't have access to {GauGau}
2009-06-01 [D] Translated Quickstart section in french and deleted reference to the banned user group who doesnt exist anymore in the english qickstart.htm file {Frantz}
2009-06-01 [O] Added memory_get_usage function {GauGau}
2009-05-31 [M] Updating French lang file {Frantz}
2009-05-31 [D] Updating french documentation (added missing documents) {Frantz}
2009-05-31 [D] Added expand arrow in the table content{Frantz}
2009-05-31 [A] Added browser agents for stats {GauGau}
2009-05-30 [D] Hiding table of content in docs if unused {GauGau}
2009-05-30 [A] Added toggle in config that disables the reset to default checkboxes on the config screen for performance reasons {GauGau}
2009-05-29 [D] Added flag icons for half-translated documents {GauGau}
2009-05-29 [D] Translated license section into German {German}
2009-05-29 [D] Added missing documents to German documentation {GauGau}
2009-05-28 [D] Upgraded jquery to version 1.3.2 for documentation {Abbas}
2009-05-28 [D] Added i18n helpers to documentation {GauGau}
2009-05-27 [D] Changed documentation to use more jquery mechanisms {GauGau}