@@ -519,15 +519,8 @@ You have to understand that this setting does <strong>not</strong> determine the
 <a name="admin_image_rating_stars_amount_start"></a><h3>Amount of rating stars to be used to vote<a href="#admin_image_rating_stars_amount_start" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
 <p>Used to determine on what scale users will be able to vote. The number you set here will set the amount of rating-stars on the thumbnail page.</p>
 <p class="navlocator" style="text-align:right;color:#0E72A4;">Configuration &rarr; Image view &rarr; Amount of rating stars to be used to vote</p>
-
 <a name="admin_image_rating_stars_amount_end"></a>
 <hr />
-<a name="admin_image_rate_own_files_start"></a><h3>Users can rate their own files <a href="#admin_image_rate_own_files_start" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
-<p>Determines if your users can rate their own files or not. <br />This will only apply if rating is enabled in the first place (per group and per album).
-</p>
-<p class="navlocator" style="text-align:right;color:#0E72A4;">Configuration &rarr; Image view &rarr; Users can rate their own files</p>
-<a name="admin_image_rate_own_files_end"></a>
-
 <a name="admin_image_comment_end"></a>
 
 
@@ -1310,6 +1303,15 @@ address. Recommended setting is NO. As most internet users today have more than 
 <p class="navlocator" style="text-align:right;color:#0E72A4;">Configuration &rarr; User settings &rarr; Enable reports</p>
 
 <a name="admin_user_enable_report_end"></a>
+<hr />
+
+<a name="admin_user_rate_own_files_start"></a><h3>Users can rate their own files<a href="#admin_image_rate_own_files_start" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+<p>Determines if your users can rate their own files or not.  Recommended setting is "no" to make sure there is no rating war among your users who try to boost their popularity by committing rating fraud.<br />This option does not determine wether your visitors will be able to rate files at all. &quot;Users can rate their own files&quot; will only apply if rating is enabled in the first place, i.e. if the user belongs to a group that is allowed to rate/vote (you can determine the overall rating permission per group on the <a href="groups.htm#group_cp">groups control panel</a>) and if rating is enabled for the album the file is in (you can toggle the ability to rate on or off on a per-album base - use the controls on the <a href="albums.htm#album_prop">album properties</a> page to accomplish that).
+</p>
+<p class="navlocator" style="text-align:right;color:#0E72A4;">Configuration &rarr; User settings &rarr; Users can rate their own files</p>
+<a name="admin_user_rate_own_files_end"></a>
+
+<hr />
 
 
 <a name="admin_custom"></a><h3>Custom fields for user profile<a href="#admin_custom" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
