@@ -1305,6 +1305,16 @@ address. Recommended setting is NO. As most internet users today have more than 
 
 <a name="admin_user_enable_report_end"></a>
 
+<hr />
+
+<a name="admin_user_rate_own_files_start"></a><h3>Users can rate their own files<a href="#admin_image_rate_own_files_start" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+<p>Determines if your users can rate their own files or not.  Recommended setting is "no" to make sure there is no rating war among your users who try to boost their popularity by committing rating fraud.<br />This option does not determine wether your visitors will be able to rate files at all. &quot;Users can rate their own files&quot; will only apply if rating is enabled in the first place, i.e. if the user belongs to a group that is allowed to rate/vote (you can determine the overall rating permission per group on the <a href="groups.htm#group_cp">groups control panel</a>) and if rating is enabled for the album the file is in (you can toggle the ability to rate on or off on a per-album base - use the controls on the <a href="albums.htm#album_prop">album properties</a> page to accomplish that).
+</p>
+<p class="navlocator" style="text-align:right;color:#0E72A4;">Configuration &rarr; User settings &rarr; Users can rate their own files</p>
+<a name="admin_user_rate_own_files_end"></a>
+
+<hr />
+
 
 <a name="admin_custom"></a><h3>Custom fields for user profile<a href="#admin_custom" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
 <p>Leave blank if unused. Use Profile 6 for long entries, such as biographies</p>
